user profile and edit ux improvements, icons on fields

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -251,8 +251,9 @@ template(name='remove_button')
 
 template(name='add_button')
     a.ui.large.basic.button.add(title="Add #{model}")
-        i.plus.icon
-        |#{label}
+        i.green.plus.icon
+        if label
+            |#{label}
         //- |#{model}
 
 
