--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -26,7 +26,7 @@ template(name='session_edit_icon')
                 |Save
 
 template(name='edit_button')
-    a.ui.icon.big.basic.button(href="/m/#{model}/#{_id}/edit" title='edit')
-        +ismall name='pencil'
+    a.ui.icon.compact.basic.button(href="/m/#{model}/#{_id}/edit" title='edit')
+        +i name='pencil' classes='ui inline mini image'
         //- i.pencil.icon
         
