--- a/client/unit.jade
+++ b/client/unit.jade
@@ -6,3 +6,8 @@ template(name='units')
                 |unit
         .twelve.wide.column
             |unit content
+            .ui.header hi
+            with unit 
+                |#{title}
+            with permits
+                +unit_permits
