--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -123,7 +123,8 @@ template(name='user_email')
 template(name='big_user_card')
     with user
         //- .ui.card
-        .ui.card(class=resident_status_class)
+        //- .ui.card(class=resident_status_class)
+        .ui.card
             .image
                 img.ui.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
             .content
