alpha unit owners listing in unit page

--- a/client/staff.jade
+++ b/client/staff.jade
@@ -45,7 +45,7 @@ template(name='staff')
     
     +schedule
     //- +shift_change_requests
-    +view_chats
+    //- +view_chats
 
 
 template(name='unit_key_widget')
