--- a/client/unit.jade
+++ b/client/unit.jade
@@ -1,6 +1,9 @@
 template(name='unit')
     .ui.stackable.padded.grid
         .four.wide.column
+            a.ui.button(href="/building/#{unit.building_code}")
+                i.yellow.left.chevron.icon
+                |#{unit.building_code}
             .ui.header 
                 +i name='apartment'
                 |unit
@@ -42,12 +45,13 @@ template(name='unit_residents')
         .ui.header
             +i name='group'
             |unit residents
-        each residents
-            .ui.card
-                .image
-                    img.ui.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
-                .content
-                    a.header(href="/user/#{username}")
-                         |#{first_name} #{last_name} 
-                        .meta @#{username}
-                        //- +array_view key='tags' label='Tags' direct=true
+        .ui.cards
+            each residents
+                .ui.card
+                    .image
+                        img.ui.image(src="{{c.url image_id width=300 height=300 gravity='face' crop='fill'}}")
+                    .content
+                        a.header(href="/user/#{username}")
+                             |#{first_name} #{last_name} 
+                            .meta @#{username}
+                            //- +array_view key='tags' label='Tags' direct=true
